<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AppMorphingSample$PlaceholderFragment">

    <TextView
        android:id="@+id/explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation"
        android:paddingBottom="@dimen/large_padding"/>

    <TextView
        android:id="@+id/select_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/explanation"
        android:paddingTop="@dimen/text_button_padding"
        android:paddingBottom="@dimen/text_button_padding"
        android:paddingRight="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:text="@string/select_icon"/>
    
    <Button
        android:id="@+id/select_icon_button"
        android:layout_alignTop="@id/select_icon"
        android:layout_alignRight="@+id/select_label_field"
        android:layout_alignEnd="@+id/select_label_field"
        android:layout_width="@dimen/interactive_item_width"
        android:layout_height="@dimen/interactive_item_height"
        android:text="@string/select_icon_button"/>

    <TextView
        android:id="@+id/select_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_button_padding"
        android:paddingRight="@dimen/small_padding"
        android:layout_below="@+id/select_icon"
        android:text="@string/select_label"/>

    <EditText
        android:id="@+id/select_label_field"
        android:layout_width="@dimen/interactive_item_width"
        android:layout_height="@dimen/interactive_item_height"
        android:layout_alignTop="@id/select_label"
        android:layout_toRightOf="@+id/select_label"
        android:layout_toEndOf="@+id/select_label"/>

    <Button
        android:id="@+id/morph_button"
        android:layout_below="@id/select_label_field"
        android:layout_width="@dimen/interactive_item_width"
        android:layout_height="@dimen/interactive_item_height"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/morph"
        android:enabled="false"/>

    <TextView
        android:id="@+id/non_ascii_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/small_padding"
        android:layout_toRightOf="@+id/morph_button"
        android:layout_toEndOf="@+id/morph_button"
        android:layout_alignTop="@id/morph_button"
        android:text="@string/non_ascii_error"
        android:visibility="gone"
        android:textColor="@color/red"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/morph_button"
        android:layout_marginTop="@dimen/small_padding"
        style="@style/ProgressBar"
        android:indeterminate="false"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/share_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/morph_button"
        android:orientation="horizontal"
        android:visibility="gone">
        <ImageView
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size" />
        <TextView
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_toRightOf="@+id/icon"
            android:layout_toEndOf="@+id/icon"
            android:id="@+id/label"
            android:paddingTop="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/share_button"
            android:src="@android:drawable/ic_menu_share"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size" />
    </RelativeLayout>
</RelativeLayout>
